--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@hcaptcha/vue-hcaptcha": "^0.3.0",
     "@nuxtclub/feathericons": "^1.0.0",
     "@nuxtjs/axios": "^5.13.4",
     "@nuxtjs/pwa": "^3.3.5",
