--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "vue-carbonbadge": "^1.1.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
